--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -292,6 +292,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Distribution of Missing Value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
